# Solina

./: Cargo.toml  LICENSE  README.md  TASKS.md  rust-toolchain.toml  test_api.sh
accumulator/: Cargo.toml  README.md
backbone/: Cargo.toml
circuit-tree-generation/: Cargo.toml
circuit-tree-generation/src/: lib.rs  tests.rs  tree_circuit_generation.rs  tree_generation.rs  utils.rs
dag/: Cargo.toml
dag/src/: expr.rs  functional.rs  input.rs  insert_balance.rs  job.rs  job_circuit.rs  lib.rs  session.rs  transfer.rs
eth-wallet/: Cargo.toml
infrastructure/solina/: Cargo.toml
infrastructure/solina-circuits/: Cargo.toml
infrastructure/solina-circuits/src/: lib.rs  match_circuit.rs  solver_circuit.rs
infrastructure/solina-client/: Cargo.toml
infrastructure/solina-client/src/: intent_client.rs  lib.rs  main.rs
infrastructure/solina-service/: Cargo.toml
infrastructure/solina-service/src/: auth_challenge.rs  auth_middleware.rs  config.rs  error.rs  errors.rs  intents.rs  json_rpc_server.rs  lib.rs  main.rs  mempool.rs  types.rs  worker.rs
infrastructure/solina/src/: intent.rs  lib.rs  price_oracle.rs  solver.rs  structured_hash.rs
infrastructure/storage_sqlite/: Cargo.toml
infrastructure/storage_sqlite/migrations/20230822-15807-init_intents/: up.sql
infrastructure/storage_sqlite/migrations/20230910-16322-auth_credentials/: up.sql
infrastructure/storage_sqlite/migrations/20230912-14678-solver-registration/: up.sql
infrastructure/storage_sqlite/migrations/20230913-13225-update_intents_table/: up.sql
infrastructure/storage_sqlite/src/: error.rs  lib.rs  reader.rs  reader_writer.rs  schema.rs
infrastructure/storage_sqlite/src/models/: auth_credentials.rs  current_batch_id.rs  intents.rs  mod.rs  solvers.rs
intent/: Cargo.toml  README.md
intent/src/: circuit.rs  crypto.rs  encoding.rs  intent.rs  lib.rs  transfer_intent.rs  utils.rs  witness.rs
linear-dag-demo/: Cargo.toml
linear-dag-demo/src/: expr.rs  functional.rs  insert_balance.rs  lib.rs  main.rs  moving_average.rs  tests.rs  transfer.rs
risc0/service/: Cargo.toml
risc0/service/src/: main.rs
risc0/service/static/: form.html
segment/: Cargo.toml  README.md
segment/src/: segment.rs
solina/: Cargo.toml
solina-service/: Cargo.toml
solina-service/src/: intents.rs  lib.rs  types.rs  worker.rs
solina-service/storage_sqlite/src/: reader.rs
solina-service/storage_sqlite/src/models/: mod.rs
solina-zkvm/host/: Cargo.toml
solina-zkvm/host/src/: main.rs
solina-zkvm/methods/: Cargo.toml
solina-zkvm/methods/guest/: Cargo.toml
solina-zkvm/methods/guest/src/: lib.rs  main.rs  swap_challenger.rs  swap_intent.rs
solina/src/: challenger.rs  error.rs
src/: main.rs
