[workspace]
members = [
    "infrastructure/solina",
    "infrastructure/solina-circuits",
    "infrastructure/solina-client",
    "infrastructure/solina-service",
    "infrastructure/storage_sqlite",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
