[package]
name = "solina-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
service = "0.0.0"
tokio = "1.32.0"
solina = { path = "../solina/" }
num-bigint = "0.4.3"
