[package]
name = "solina-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.1.4"
plonky2_u32 = { git = "https://github.com/mir-protocol/plonky2-u32" }
solina = { path = "../solina/" }
zktree = { git = "https://github.com/jorgeantonio21/zktree" }
