[package]
name = "solina-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
solina = { path = "../solina/" }
num-bigint = { version = "0.4.3", features = ["serde"] }
keccak-hash = "0.10.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
storage-sqlite = { path = "../storage_sqlite/" }
hex = "0.4.3"
strum_macros = "0.25.2"
