[package]
name = "solina-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
solina = { path = "../solina/" }
num-bigint = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
storage-sqlite = { path = "../storage_sqlite/" }
hex = "0.4.3"
strum_macros = "0.25.2"
log = "0.4.20"
env_logger = "0.10.0"
tower = "0.4.13"
rand = "0.8.5"
once_cell = "1.18.0"
ethers = "2.0.10"
http = "0.2.9"
hyper = "0.14.27"
