[package]
name = "solina-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
env_logger = "0.10.0"
ethers = "2.0.10"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.20"
num-bigint = { version = "0.4.3", features = ["serde"] }
once_cell = "1.18.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
solina = { path = "../solina/" }
storage-sqlite = { path = "../storage_sqlite/" }
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
rand = "0.8.5"
futures-util = "0.3.28"
chrono = "0.4.30"
