[package]
name = "solina"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
keccak-hash = "0.10.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
serde = { version = "1.0.185", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.105"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
