[package]
name = "storage-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] } 
chrono = "0.4.26"
anyhow = "1.0.75"
solina = { path = "../solina" }
hex = "0.4.3"
diesel_migrations = "2.1.0"
thiserror = "1.0.47"
num-traits = "0.2.16"
num-bigint = "0.4.4"
