[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4"
libc = "0.2.2"
json = "0.12"
risc0-zkvm = { version = "1.0.0-rc.2", default-features = false, features = ["std", "prove"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-multipart-derive = "0.6.0"
anyhow = "1"

[workspace]

[package.metadata.risc0]
methods = ["guest"]

[patch.crates-io]
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
